--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,26 @@
   <title>Lyriceum</title>
   <base href="/">
 
+  <!-- Propeller card (CSS for helping component example file)-->
+	<link href="http://propeller.in/components/card/css/card.css" type="text/css" rel="stylesheet" />
+	
+	<!-- Example docs (CSS for helping component example file)-->
+	<link href="http://propeller.in/docs/css/example-docs.css" type="text/css" rel="stylesheet" />
+	
+	<!-- Propeller typography -->
+	<link href="http://propeller.in/components/typography/css/typography.css" type="text/css" rel="stylesheet" />
+
+	<!-- Google Icon Font -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<!--<link href="../components/icons/css/google-icons.css" type="text/css" rel="stylesheet" /> -->
+	
+	<!-- Propeller Button -->
+	<link href="http://propeller.in/components/button/css/button.css" type="text/css" rel="stylesheet" />
+	
+	<!-- Propeller Accordion -->
+	<link href="http://propeller.in/components/floating-action-button/css/floating-action-button.css" type="text/css" rel="stylesheet" /> 
+    
+
   <style>
     ::-moz-selection { /* Code for Firefox */
   color: white;
@@ -44,6 +64,7 @@
   <link rel="icon" type="image/x-icon" href="assets/logo.png">
 </head>
 <body>
+  
   <app-root></app-root>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
